chore: 整理 webpack 笔记

--- a/docs/draft/临时记录.md
+++ b/docs/draft/临时记录.md
@@ -134,7 +134,12 @@ handle（event） {
   console.log(event)
 }
 2、直接调用事件处理函数，需要手动把$event传入到处理函数中
-<button v-on:click="handle(payload， $event)">Say what</button>
+
+```js
+ <button v-on:click="handle(payload， $event)">click</button>
+```
+
+
 handle（payload, event） {
   console.log(event)
 }
