--- a/docs/draft/开发记录.md
+++ b/docs/draft/开发记录.md
@@ -2,18 +2,10 @@
 
 ### 开发注意事项
 
-1. Select选择器 clearable 将参数置为null，需处理为 ''，封装transformParams方法处理
+1. Select选择器 clearable 将参数置为null，需处理为 '""，封装transformParams方法处理
 2. encodeURIComponent处理查询字段输入特殊符号 %.. 等，避免调用时接口报错
 3. 搜索时不要直接绑定params中的值，绑定另外一个searchKey，保证在删除关键字，点击下一页时不会报错
 4. removeEventlistener 不能移除匿名函数，可以使用 document.onclick = fn 的方式绑定，并且在beforeDestroy钩子函数中移除事件 document.onclick = null，需要注意的时，这种方式不能绑定多个事件处理函数，如一个页面中某个组件使用了多次，并且都绑定了window.onscroll = fn ，那么最后一个组件中绑定的事件处理函数会覆盖前面几个组件的处理函数，这个时候应该使用 addEventlistener 来绑定事件。
-
-### 部署博客
-
-"scripts": {
-
- 	 "upload": "pscp.exe -p -r -v -scp -pw 8+Cd7kNJQpprzM?7  ./public root@149.28.81.196:/usr/src/blog/"
-
-  }
 
 ### VSCode配置Vue项目的开发环境
 
@@ -469,6 +461,10 @@ yarn config set sass_binary_site https://npm.taobao.org/mirrors/node-sass/ --glo
 # 第二步 重新安装 node-sass 依赖
 yarn add node-sass@xxx -D
 ```
+
+### puppeteer安装失败问题
+
+
 
 ### node下载指定版本
 
